# canopen-stack-socketcan

cmake_pure/: CMakeLists.txt
include/: co_can_socketcan.h  co_can_socketcan_conf.h
src/: co_can_socketcan.c
